# chrome-wrapped

./: .eslintrc.js  .gitignore  .prettierignore  README.md  package.json  pnpm-lock.yaml  turbo.json  vercel.json
backend/: README.md  pyproject.toml
backend/app/: main.py
backend/app/data/: domain_categories.json  keyword_rules.yaml
backend/app/models/: db.py  schemas.py
backend/app/routers/: runs.py
backend/app/services/: analytics.py  categorizer.py  cleanup.py  personality.py
backend/tests/: conftest.py  test_analytics.py  test_categorizer.py  test_personality.py  test_runs.py
extension/: package.json  tsconfig.json  wxt.config.ts
extension/src/entrypoints/: background.ts
extension/src/entrypoints/options/: Options.tsx  index.html  main.tsx  styles.css
extension/src/entrypoints/popup/: Popup.tsx  index.html  main.tsx  styles.css
extension/src/lib/: api.ts  history.ts  settings.ts
shared/: package.json
shared/src/: types.ts
web/: package.json  vercel.json
web/src/app/: layout.tsx  page.tsx
web/src/app/wrapped/[runId]/: page.tsx
web/src/components/: EmptyScreen.tsx  ErrorScreen.tsx  LoadingScreen.tsx
web/src/components/retro/: CRTScanlines.tsx  MarqueeTicker.tsx  PixelButton.tsx  Window98.tsx
web/src/components/slides/: CategoriesSlide.tsx  DayOfWeekSlide.tsx  FinaleSlide.tsx  HeatmapSlide.tsx  IntroSlide.tsx  PeakHourSlide.tsx  PersonalitySlide.tsx  SessionSlide.tsx  TopSitesSlide.tsx  TotalsSlide.tsx  index.ts
web/src/components/story/: StoryPlayer.tsx
web/src/lib/: api.ts
web/src/styles/: globals.scss  retro.scss
