[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "chrome-wrapped-backend"
version = "0.1.0"
description = "FastAPI backend for Chrome Wrapped analytics"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.7.0",
    "sqlmodel>=0.0.18",
    "tldextract>=5.1.0",
    "python-dateutil>=2.9.0",
    "orjson>=3.10.0",
    "pyyaml>=6.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
    "ruff>=0.4.0",
    "black>=24.4.0",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
target-version = "py312"
line-length = 88
select = [
    "E",
    "F",
    "W",
    "I",
    "UP",
    "B",
    "C4",
    "SIM",
]
ignore = [
    "E501",
]

[tool.ruff.isort]
known-first-party = ["app"]

[tool.black]
target-version = ["py312"]
line-length = 88

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
